feat(ui): add yandex.map script to index

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <!--link href="./css/darkly.bootstrap.min.css" rel="stylesheet"/-->
     <!--link href="./css/flatly.bootstrap.min.css" rel="stylesheet"/-->
     <!--link href="./css/superhero.bootstrap.min.css" rel="stylesheet"/-->
-
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=76ef213a-9281-443f-9b41-9e3960d55ef1&lang=ru_RU" type="text/javascript"></script>
     <link href="./css/codemirror/codemirror.css" rel="stylesheet"/>
     <link href="./css/codemirror/fullscreen.css" rel="stylesheet"/>
     <link href="./css/fullcalendar.min.css" rel="stylesheet"/>
