--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <link href="./css/fullcalendar.min.css" rel="stylesheet"/>
     <link href="./css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <link href="./css/veda.css" rel="stylesheet"/>
+    <link href="./css/veda-lng.css" rel="stylesheet"/>
     <link href="./css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="shortcut icon" href="./favicon.png"/>
 
