--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-body">
-               <button type="button" class="close" data-dismiss="modal"><span class="fa fa-times"></span></button>
+               <button type="button" class="close" data-dismiss="modal"><span class="fa fa-2x fa-times"></span></button>
             </div>
           </div>
         </div>
